[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/tooth.gd" type="Script" id=1]
[ext_resource path="res://Textures/dente_sprite.png" type="Texture" id=2]
[ext_resource path="res://Scenes/po_dos_dentes.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/Hit_Hurt2.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Explosion2.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 45 )

[node name="tooth" type="Area2D"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 2
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Particles2D" parent="." index="2" instance=ExtResource( 3 )]

[node name="snd_hit" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Hit"
area_mask = 1

[node name="snd_destruido" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Explosoes"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_tooth_body_entered"]


